--- a/create-react-app/package.json
+++ b/create-react-app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://berrydashboard.io/",
   "dependencies": {
+    "@chatscope/chat-ui-kit-react": "^1.10.1",
     "@emotion/cache": "^11.9.3",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
