--- a/create-react-app/package.json
+++ b/create-react-app/package.json
@@ -15,6 +15,7 @@
     "@mui/utils": "^5.8.6",
     "@tabler/icons": "^1.72.0",
     "apexcharts": "^3.35.3",
+    "dotenv": "^16.0.3",
     "formik": "^2.2.9",
     "framer-motion": "^6.3.16",
     "material-ui-popup-state": "^4.0.1",
