--- a/create-react-app/package.json
+++ b/create-react-app/package.json
@@ -24,6 +24,7 @@
     "react-apexcharts": "^1.4.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^8.0.2",
     "react-router": "6.3.0",
